vlib/v/checker/tests/require_sub_struct_init.vv
module main

struct Abc {
	field int [required]
}

struct NestedAbc {
	Abc
}

struct FieldAbc {
	field Abc
}

fn main() {
	_ := NestedAbc{}
	_ := FieldAbc{}
}
